[feature] implement query bus and query handler

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -672,7 +672,9 @@ style:
   VarCouldBeVal:
     active: true
   WildcardImport:
-    active: true
+    active: false
     excludes: ['**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**']
     excludeImports:
       - 'java.util.*'
+      - 'io.ktor.http.*'
+
